Expression do not handle multiple string values of a DICOM tag #211